crates/bamltype/tests/ui/unsupported_baml_attr.stderr
error: unsupported #[baml(...)] attribute; hint: check the supported keys in the bridge docs
 --> tests/ui/unsupported_baml_attr.rs:4:8
  |
4 | #[baml(unknown = "x")]
  |        ^^^^^^^^^^^^^
