crates/bamltype/tests/ui/unsupported_baml_attr.rs
use bamltype::BamlType;

#[BamlType]
#[baml(unknown = "x")]
struct UnsupportedAttr {
    value: String,
}

fn main() {}
